--- a/networkchat-client-main/termclient.vcxproj
+++ b/networkchat-client-main/termclient.vcxproj
@@ -115,7 +115,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;_WINSOCK_DEPRECATED_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>false</ConformanceMode>
     </ClCompile>
     <Link>
@@ -143,7 +143,6 @@
     <ClCompile Include="termclientcpp.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\PrjClient\resource.h" />
     <ClInclude Include="resources.h" />
   </ItemGroup>
   <ItemGroup>
